[gd_scene load_steps=12 format=3 uid="uid://lmanumoq7ckt"]

[ext_resource type="Script" path="res://boss.gd" id="1_3b0ru"]
[ext_resource type="AudioStream" uid="uid://cbfektgoli3eh" path="res://SFX/huh.mp3" id="2_fgwj1"]
[ext_resource type="AudioStream" uid="uid://cictcy2akey7y" path="res://SFX/chicken_die.mp3" id="3_5n5au"]
[ext_resource type="AudioStream" uid="uid://bcokwkjfvcm5s" path="res://SFX/hwaah.mp3" id="4_fjv4l"]
[ext_resource type="ArrayMesh" uid="uid://byfl251kply7l" path="res://game/OtherCharacters/Enemie1/Enemy1.obj" id="5_lh711"]
[ext_resource type="AudioStream" uid="uid://dsf46ypxdpl58" path="res://SFX/human_scream.mp3" id="5_w8wwu"]
[ext_resource type="ArrayMesh" uid="uid://dra1tdnyqpmjk" path="res://game/OtherCharacters/Enemy2/Enemy2.obj" id="6_tjr5o"]
[ext_resource type="ArrayMesh" uid="uid://cigqnggjdbbmt" path="res://game/OtherCharacters/Enemy3/Enemy3.obj" id="7_b0b8w"]
[ext_resource type="Texture2D" uid="uid://dnyrv5sk6vd4l" path="res://game/UIElements/Health-Bar.png" id="9_nmsmg"]

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_ljwbd"]
radius = 0.381363
height = 1.74533

[sub_resource type="CylinderShape3D" id="CylinderShape3D_1x37s"]
height = 11.095
radius = 34.1461

[node name="Boss" type="CharacterBody3D" groups=["Boss"]]
script = ExtResource("1_3b0ru")
EnemyVariant = 2

[node name="NavigationAgent3D" type="NavigationAgent3D" parent="."]

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.000441909, 0.813391, -0.000435948)
shape = SubResource("CapsuleShape3D_ljwbd")

[node name="Area3D" type="Area3D" parent="."]

[node name="CollisionShape3D" type="CollisionShape3D" parent="Area3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.515788, 0)
shape = SubResource("CylinderShape3D_1x37s")

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("2_fgwj1")
pitch_scale = 0.71
bus = &"SFX"

[node name="AudioStreamPlayer2" type="AudioStreamPlayer" parent="."]
stream = ExtResource("3_5n5au")
volume_db = -4.684
bus = &"SFX"

[node name="AudioStreamPlayer3" type="AudioStreamPlayer" parent="."]
stream = ExtResource("4_fjv4l")
bus = &"SFX"

[node name="AudioStreamPlayer4" type="AudioStreamPlayer" parent="."]
stream = ExtResource("5_w8wwu")
volume_db = -4.685
pitch_scale = 0.75
bus = &"SFX"

[node name="Enemy1" type="MeshInstance3D" parent="."]
transform = Transform3D(-1, 0, -8.74228e-08, 0, 1, 0, 8.74228e-08, 0, -1, 0, 0.805089, 0)
visible = false
mesh = ExtResource("5_lh711")

[node name="Enemy2" type="MeshInstance3D" parent="."]
transform = Transform3D(-1, 0, -8.74228e-08, 0, 1, 0, 8.74228e-08, 0, -1, 0, 0.798919, 0)
visible = false
mesh = ExtResource("6_tjr5o")

[node name="Enemy3" type="MeshInstance3D" parent="."]
transform = Transform3D(-2, 0, -3.01992e-07, 0, 2, 0, 3.01992e-07, 0, -2, 0, 0.802773, 0)
mesh = ExtResource("7_b0b8w")

[node name="Control" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="enemyBackground" type="ColorRect" parent="Control"]
layout_mode = 0
offset_left = 750.0
offset_top = 18.0
offset_right = 1141.0
offset_bottom = 58.0
color = Color(0.34902, 0.360784, 0.34902, 1)

[node name="enemyForeground" type="ColorRect" parent="Control"]
layout_mode = 0
offset_left = 750.0
offset_top = 18.0
offset_right = 1141.0
offset_bottom = 58.0
color = Color(1, 0, 0, 1)

[node name="enemyForeforeground" type="Sprite2D" parent="Control"]
texture_filter = 1
position = Vector2(944.5, 40.5)
scale = Vector2(0.538961, 0.758242)
texture = ExtResource("9_nmsmg")

[connection signal="body_entered" from="Area3D" to="." method="_on_area_3d_body_entered"]
[connection signal="body_exited" from="Area3D" to="." method="_on_area_3d_body_exited"]
